--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,12 @@ email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   Raleigh Family Dentist Dr. Quyen D. Chang provides gentle and comprehensive general dental care, and has practiced dentistry in the Triangle area for 27 years. We are conveniently located near North Hills Mall.
 keywords: "Raleigh NC, Dentist, Family Dentist"
-baseurl: "" # the subpath of your site, e.g. /blog/
+baseurl: "/changdds" # the subpath of your site, e.g. /blog
+# http://ricostacruz.com/til/relative-paths-in-jekyll.html
+# https://github.com/jekyll/jekyll/issues/332
+# https://github.com/jekyll/jekyll/pull/1291/files
+# then use.. jekyll serve --baseurl ''
+
 url: "http://www.quyenchangdds.com" # the base hostname & protocol for your site
 
 twitter_username: jekyllrb
