add email into contact info table

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Quyen D. Chang DDS, family dentist in Raleigh NC
-email: your-email@domain.com
+email: quyenchangdds@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Raleigh Family Dentist Dr. Quyen D. Chang provides gentle and comprehensive general dental care, and has practiced dentistry in the Triangle area for 27 years. We are conveniently located near North Hills Mall.
 keywords: "Raleigh NC, Dentist, Family Dentist"
