--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: quyenchangdds@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Raleigh Family Dentist Dr. Quyen D. Chang provides gentle and comprehensive general dental care, and has practiced dentistry in the Triangle area for 27 years. We are conveniently located near North Hills Mall.
 keywords: "Raleigh NC, Dentist, Family Dentist"
-baseurl: "/changdds" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 # http://ricostacruz.com/til/relative-paths-in-jekyll.html
 # https://github.com/jekyll/jekyll/issues/332
 # https://github.com/jekyll/jekyll/pull/1291/files
