--- a/_config.yml
+++ b/_config.yml
@@ -5,10 +5,14 @@ description: > # this means to ignore newlines until "baseurl:"
   Raleigh Family Dentist Dr. Quyen D. Chang provides gentle and comprehensive general dental care, and has practiced dentistry in the Triangle area for 27 years. We are conveniently located near North Hills Mall.
 keywords: "Raleigh NC, Dentist, Family Dentist"
 baseurl: "/changdds" # the subpath of your site, e.g. /blog
+# ** for prod, when you want the root path as "/" use..
+# **   jekyll serve --baseurl ''
+# ** else for daily dev, use..
+# **   jekyll serve
+#
 # http://ricostacruz.com/til/relative-paths-in-jekyll.html
 # https://github.com/jekyll/jekyll/issues/332
 # https://github.com/jekyll/jekyll/pull/1291/files
-# then use.. jekyll serve --baseurl ''
 
 url: "http://www.quyenchangdds.com" # the base hostname & protocol for your site
 googleMapUrl: "https://www.google.com/maps/place/3388+Six+Forks+Rd,+Raleigh,+NC+27609/@35.826931,-78.632765,11z"
@@ -19,6 +23,5 @@ sass:
 
 # Build settings
 markdown: kramdown
-
 
 # test comment
