--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 # Site settings
 title: Quyen D. Chang DDS, family dentist in Raleigh NC
-email: quyenchangdds@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Raleigh Family Dentist Dr. Quyen D. Chang provides gentle and comprehensive general dental care, and has practiced dentistry in the Triangle area for 27 years. We are conveniently located near North Hills Mall.
 keywords: "Raleigh NC, Dentist, Family Dentist"
@@ -15,6 +14,7 @@ baseurl: "/changdds" # the subpath of your site, e.g. /blog
 # https://github.com/jekyll/jekyll/pull/1291/files
 
 url: "http://www.quyenchangdds.com" # the base hostname & protocol for your site
+email: info@quyenchangdds.com
 googleMapUrl: "https://www.google.com/maps/place/3388+Six+Forks+Rd,+Raleigh,+NC+27609/@35.826931,-78.632765,11z"
 
 # Sass settings
