--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ baseurl: "/changdds" # the subpath of your site, e.g. /blog
 # https://github.com/jekyll/jekyll/issues/332
 # https://github.com/jekyll/jekyll/pull/1291/files
 
-url: "http://www.quyenchangdds.com" # the base hostname & protocol for your site
+url: "https://www.quyenchangdds.com" # the base hostname & protocol for your site
 email: info@quyenchangdds.com
 googleMapUrl: "https://www.google.com/maps/place/3388+Six+Forks+Rd,+Raleigh,+NC+27609/@35.826931,-78.632765,11z"
 
