feat: 2023 thanksgiving dates

--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,9 @@ baseurl: "/changdds" # the subpath of your site, e.g. /blog
 url: "https://www.quyenchangdds.com" # the base hostname & protocol for your site
 email: info@quyenchangdds.com
 phone: (919) 783-6551
+phoneText: (919) 213-0086
+phoneRaw: 19197836551
+phoneTextRaw: 19192130086
 googleMapUrl: "https://www.google.com/maps/place/3388+Six+Forks+Rd,+Raleigh,+NC+27609/@35.826931,-78.632765,11z"
 
 # see Tim's email, F 11/12/2021, CAPTCHA
